fallback to old syntax due to backward compatability with JDK11