@@ -2,6 +2,7 @@ package tools.sapcx.commerce.reporting.search;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang.StringUtils;
@@ -27,7 +28,7 @@ public class GenericSearchResult {
 	public List<String> getHeaderNames() {
 		return getHeaders().stream()
 				.map(GenericSearchResultHeader::getExportName)
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	public List<Map<GenericSearchResultHeader, String>> getValues() {
